--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@octokit/rest": "^21.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.1.7",
     "node-pdflatex": "^0.3.0",
     "octokit": "^4.1.2",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
