--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pdfjs-dist": "4.8.69",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
     "react-icons": "^5.5.0",
     "react-pdf": "^9.2.1"
   },
