--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.1.7",
     "node-pdflatex": "^0.3.0",
     "octokit": "^4.1.2",
+    "pdf-lib": "^1.17.1",
     "pdfjs-dist": "4.8.69",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
