--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commitcv",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -8,6 +8,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "engines": {
+    "node": ">=22.14.0"
   },
   "dependencies": {
     "@octokit/auth-app": "^7.1.5",
