--- a/CommitCV/package.json
+++ b/CommitCV/package.json
@@ -13,6 +13,7 @@
     "node": ">=22.14.0"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@octokit/auth-app": "^7.1.5",
     "@octokit/rest": "^21.1.1",
     "jsonwebtoken": "^9.0.2",
