--- a/CommitCV/package.json
+++ b/CommitCV/package.json
@@ -13,6 +13,9 @@
     "node": ">=22.14.0"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hello-pangea/dnd": "^18.0.1",
     "@octokit/auth-app": "^7.1.5",
     "@octokit/rest": "^21.1.1",
