--- a/pdfCV/package.json
+++ b/pdfCV/package.json
@@ -1,7 +1,8 @@
 {
   "name": "pdfcv",
-  "version": "1.0.1",
+  "version": "1.2.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
@@ -25,6 +26,7 @@
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "uuid": "^11.1.0"
   }
 }
