chore: update .env.example file

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ NEXT_PUBLIC_COMMITCV_URL=http://localhost:3000
 COMMITCV_PORT=3000
 #pdfCV API Port
 SERVER_PORT=3005
-#The public url of the CommitCV instance
-CORS_ORIGIN=${NEXT_PUBLIC_COMMITCV_URL}
+#The public url of the CommitCV instance can be a csv list with no spaces
+CORS_ORIGIN=http://localhost:3000,http://localhost:3002
 #Docker Container Networking IP
 DOCKER_NETWORK_IP=0.0.0.0
