--- a/CommitCV/package.json
+++ b/CommitCV/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "engines": {
     "node": ">=22.14.0"
@@ -20,23 +20,25 @@
     "@octokit/auth-app": "^7.1.5",
     "@octokit/rest": "^21.1.1",
     "jsonwebtoken": "^9.0.2",
-    "next": "15.1.7",
+    "next": "16.0.3",
     "octokit": "^4.1.2",
     "pdfjs-dist": "4.8.69",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.5.0",
     "react-pdf": "^9.2.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@types/jsonwebtoken": "^9.0.8",
-    "@types/react": "^19",
+    "@types/react": "19.2.6",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7",
+    "eslint-config-next": "16.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.6"
   }
 }
