--- a/CommitCV/package.json
+++ b/CommitCV/package.json
@@ -1,44 +1,27 @@
 {
   "name": "commitcv",
-  "version": "2.0.2",
+  "version": "3.0.0-alpha",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ."
-  },
-  "engines": {
-    "node": ">=22.14.0"
+    "lint": "eslint"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
-    "@hello-pangea/dnd": "^18.0.1",
-    "@octokit/auth-app": "^7.1.5",
-    "@octokit/rest": "^21.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "next": "16.0.3",
-    "octokit": "^4.1.2",
-    "pdfjs-dist": "4.8.69",
+    "next": "16.0.4",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "react-dropzone": "^14.3.5",
-    "react-icons": "^5.5.0",
-    "react-pdf": "^9.2.1"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.8",
-    "@types/react": "19.2.6",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "eslint-config-next": "16.0.4",
+    "tailwindcss": "^4",
     "typescript": "^5"
-  },
-  "overrides": {
-    "@types/react": "19.2.6"
   }
 }
