--- a/CommitCV/package.json
+++ b/CommitCV/package.json
@@ -1,10 +1,10 @@
 {
   "name": "commitcv",
-  "version": "2.1.1",
+  "version": "2.1.3",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -20,11 +20,11 @@
     "@octokit/auth-app": "^7.2.2",
     "@octokit/rest": "^21.1.1",
     "jsonwebtoken": "^9.0.3",
-    "next": "15.1.9",
+    "next": "15.1.11",
     "octokit": "^4.1.4",
     "pdfjs-dist": "4.8.69",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-pdf": "^9.2.1"
@@ -36,7 +36,7 @@
     "eslint": "^9.39.1",
     "eslint-config-next": "15.1.7",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5.9.3"
   }
 }
