--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "eslint-plugin-react-hooks": "^7.0.1",
         "eslint-plugin-react-refresh": "^0.4.24",
         "globals": "^16.5.0",
+        "husky": "^9.1.7",
         "jiti": "^2.6.1",
         "prettier": "3.7.4",
         "typescript": "~5.9.3",
