--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
-        "lint": "eslint .",
-        "lint:fix": "eslint . --fix",
+        "lint": "prettier . && eslint .",
+        "lint:fix": "prettier . --write && eslint . --fix",
         "preview": "vite preview",
         "prepare": "husky"
     },
@@ -22,7 +22,6 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.18",
-        "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-prettier": "^5.5.4",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
@@ -34,6 +33,8 @@
         "@eslint/js": "^9.39.2",
         "@eslint/json": "^0.14.0",
         "@eslint/markdown": "^7.5.1",
+        "@html-eslint/eslint-plugin": "^0.52.1",
+        "@html-eslint/parser": "^0.52.0",
         "@types/node": "^24.10.1",
         "@types/react": "^19.2.5",
         "@types/react-dom": "^19.2.3",
@@ -42,6 +43,7 @@
         "@vitejs/plugin-react": "^5.1.1",
         "eslint": "^9.39.2",
         "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^7.0.1",
         "eslint-plugin-react-refresh": "^0.4.24",
