--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,7 +27,8 @@
         /* Path Aliases */
         "baseUrl": "./",
         "paths": {
-            "@components/*": ["src/components/*"]
+            "@components/*": ["src/components/*"],
+            "@hooks/*": ["src/hooks/*"]
         }
     },
     "include": ["src"]
