--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "compilerOptions": {
         "baseUrl": "./",
         "paths": {
-            "@components/*": ["src/components/*"]
+            "@components/*": ["src/components/*"],
+            "@hooks/*": ["src/hooks/*"]
         }
     }
 }
